<?xml version="1.0" encoding="utf-8"?>
<com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/folding_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:animationDuration="1000"
    app:backSideColor="@color/semi_transparent_card"
    app:cameraHeight="30">




    <FrameLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_folded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="@color/semi_transparent_card"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView_country_folded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/exo_bold"
                    android:gravity="center"
                    android:text="@string/country"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryText"
                    android:textSize="35sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_country_folded"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo_bold"
                        android:text="@string/cases"
                        android:textColor="@color/primaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_country_cases_number_folded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/digits_placeholder"
                        android:textColor="@color/soothing_blue"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_country_folded"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_country_death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo_bold"
                        android:text="@string/deaths"
                        android:textColor="@color/primaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_country_deaths_number_folded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/digits_placeholder"
                        android:textColor="@color/sad_red"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_country_folded"
                    android:layout_alignParentRight="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo_bold"
                        android:text="@string/recovered"
                        android:textColor="@color/primaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_country_recovered_number_folded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/digits_placeholder"
                        android:textColor="@color/hopeful_green"
                        android:textSize="25sp" />

                </LinearLayout>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</com.ramotion.foldingcell.FoldingCell>

