<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".ui.global.GlobalFragment"
        >
        <com.google.android.material.card.MaterialCardView


            style="@style/GridViewAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
           >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/exo_bold"
                    android:text="@string/total_cases"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tV_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/exo"
                    android:text="@string/digits_placeholder"
                    android:textAllCaps="true"
                    android:textColor="@color/case_purple"
                    android:layout_weight="1"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView


            style="@style/GridViewAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="fill"
          >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/exo_bold"
                    android:text="@string/total_recovered"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tV_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/exo"
                    android:text="@string/digits_placeholder"
                    android:textAllCaps="true"
                    android:textColor="@color/hopeful_green"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>