<?xml version="1.0" encoding="utf-8"?>





    <FrameLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_folded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView_country_folded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/exo_bold"
                    android:gravity="center"
                    android:text="@string/country"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryText"
                    android:textSize="35sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_country_folded"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_country_cases_number_folded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/digits_placeholder"
                        android:textColor="@color/case_purple"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/priorityTextView"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="2dp"
                            android:background="@drawable/case_circle"
                            android:textColor="@color/case_purple" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/exo_bold"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/cases"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_country_folded"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView_country_deaths_number_folded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/digits_placeholder"
                        android:textColor="@color/sad_red"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:background="@drawable/death_circle"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:layout_marginRight="2dp"
                            android:textColor="@color/case_purple" />

                        <TextView
                            android:id="@+id/textView_country_death"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/exo_bold"
                            android:text="@string/deaths"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_country_folded"
                    android:layout_alignParentRight="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_country_recovered_number_folded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/digits_placeholder"
                        android:textColor="@color/hopeful_green"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:background="@drawable/recovered_circle"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:layout_marginRight="2dp"
                            android:textColor="@color/case_purple" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/exo_bold"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/recovered"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>



